fixed link errors for skincare // added links for clothing

--- a/WomansWorld/Base.lproj/Main.storyboard
+++ b/WomansWorld/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="8Zt-qn-5pB">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
@@ -173,8 +173,7 @@
                                     </attributedString>
                                 </buttonConfiguration>
                                 <connections>
-                                    <action selector="onClcik:" destination="l1e-AX-AfU" eventType="touchUpInside" id="FVa-La-NWV"/>
-                                    <action selector="onClick:" destination="l1e-AX-AfU" eventType="touchUpInside" id="YdV-aL-0LI"/>
+                                    <action selector="onClick:" destination="ZkE-k2-aS1" eventType="touchUpInside" id="d6Q-3z-zQW"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -265,8 +264,7 @@
                                     </attributedString>
                                 </buttonConfiguration>
                                 <connections>
-                                    <action selector="onClcik:" destination="l1e-AX-AfU" eventType="touchUpInside" id="pfP-JU-f88"/>
-                                    <action selector="onClick:" destination="l1e-AX-AfU" eventType="touchUpInside" id="zq5-HM-0xm"/>
+                                    <action selector="onClick:" destination="Upw-c7-GFE" eventType="touchUpInside" id="5q9-oU-QeH"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -278,10 +276,10 @@
             </objects>
             <point key="canvasLocation" x="734.78260869565224" y="-640.17857142857144"/>
         </scene>
-        <!--View Controller-->
+        <!--Lisa View Controller-->
         <scene sceneID="esP-JZ-aZg">
             <objects>
-                <viewController id="ilo-1U-f11" sceneMemberID="viewController">
+                <viewController id="ilo-1U-f11" customClass="LisaViewController" customModule="WomansWorld" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="PyE-sB-uxy">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -367,8 +365,7 @@
                                     </attributedString>
                                 </buttonConfiguration>
                                 <connections>
-                                    <action selector="onClcik:" destination="l1e-AX-AfU" eventType="touchUpInside" id="aYX-pz-nDH"/>
-                                    <action selector="onClick:" destination="l1e-AX-AfU" eventType="touchUpInside" id="f3e-qi-o5z"/>
+                                    <action selector="onClick:" destination="ilo-1U-f11" eventType="touchUpInside" id="Vb6-nl-F76"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -1205,8 +1202,7 @@
                                     </attributedString>
                                 </buttonConfiguration>
                                 <connections>
-                                    <action selector="onClcik:" destination="l1e-AX-AfU" eventType="touchUpInside" id="cso-U2-7Ob"/>
-                                    <action selector="onClick:" destination="l1e-AX-AfU" eventType="touchUpInside" id="2t5-6U-bXe"/>
+                                    <action selector="onClick:" destination="l1e-AX-AfU" eventType="touchUpInside" id="MiQ-fH-ji4"/>
                                 </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" usesAttributedText="YES" lineBreakMode="tailTruncation" numberOfLines="5" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="djh-yb-h6S">
@@ -1318,7 +1314,7 @@
                                     </attributedString>
                                 </buttonConfiguration>
                                 <connections>
-                                    <action selector="onClcik:" destination="XkK-mi-pSv" eventType="touchUpInside" id="BXJ-T1-GQ3"/>
+                                    <action selector="onClick:" destination="XkK-mi-pSv" eventType="touchUpInside" id="2z0-Yv-GCT"/>
                                 </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" usesAttributedText="YES" lineBreakMode="tailTruncation" numberOfLines="11" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="r5f-oK-TJ1">
@@ -1416,8 +1412,7 @@
                                     </attributedString>
                                 </buttonConfiguration>
                                 <connections>
-                                    <action selector="onClcik:" destination="NsW-v6-q9X" eventType="touchUpInside" id="hRO-7E-1bO"/>
-                                    <action selector="onClick:" destination="NsW-v6-q9X" eventType="touchUpInside" id="5CB-Hd-NVl"/>
+                                    <action selector="onClick:" destination="NsW-v6-q9X" eventType="touchUpInside" id="mKE-HN-hdz"/>
                                 </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" usesAttributedText="YES" lineBreakMode="tailTruncation" numberOfLines="5" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cSW-Ge-AQ2">
@@ -1737,10 +1732,6 @@
                                         </fragment>
                                     </attributedString>
                                 </buttonConfiguration>
-                                <connections>
-                                    <action selector="onClcik:" destination="NsW-v6-q9X" eventType="touchUpInside" id="KDW-mn-Pwa"/>
-                                    <action selector="onClick:" destination="NsW-v6-q9X" eventType="touchUpInside" id="5JI-We-AfH"/>
-                                </connections>
                             </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="C1L-kZ-B8H"/>
@@ -1815,10 +1806,6 @@
                                         </fragment>
                                     </attributedString>
                                 </buttonConfiguration>
-                                <connections>
-                                    <action selector="onClcik:" destination="NsW-v6-q9X" eventType="touchUpInside" id="95C-nv-iIC"/>
-                                    <action selector="onClick:" destination="NsW-v6-q9X" eventType="touchUpInside" id="bQh-Ms-MZd"/>
-                                </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" usesAttributedText="YES" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9KE-Dh-4SS">
                                 <rect key="frame" x="66" y="113" width="283" height="55"/>
@@ -1902,10 +1889,6 @@
                                         </fragment>
                                     </attributedString>
                                 </buttonConfiguration>
-                                <connections>
-                                    <action selector="onClcik:" destination="NsW-v6-q9X" eventType="touchUpInside" id="IeU-ks-AXz"/>
-                                    <action selector="onClick:" destination="NsW-v6-q9X" eventType="touchUpInside" id="OK0-48-exT"/>
-                                </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" usesAttributedText="YES" lineBreakMode="tailTruncation" numberOfLines="7" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ARC-yf-37G">
                                 <rect key="frame" x="35" y="487" width="351" height="376"/>
@@ -2065,14 +2048,8 @@
                                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                         <gestureRecognizers/>
                                                     </imageView>
-                                                </subviews>
-                                                <color key="backgroundColor" red="0.86274516580000005" green="0.84705877299999999" blue="0.77254903320000001" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
-                                            </view>
-                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ah0-7b-eIJ">
-                                                <rect key="frame" x="0.0" y="503" width="374" height="503"/>
-                                                <subviews>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" usesAttributedText="YES" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Mw9-5w-uDq">
-                                                        <rect key="frame" x="63" y="-13" width="249" height="119"/>
+                                                        <rect key="frame" x="62" y="410" width="249" height="119"/>
                                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                         <attributedString key="attributedText">
                                                             <fragment content="Eberjey">
@@ -2085,8 +2062,14 @@
                                                         </attributedString>
                                                         <color key="highlightedColor" red="0.35686278339999999" green="0.49803921579999999" blue="0.55294120309999995" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                                     </label>
+                                                </subviews>
+                                                <color key="backgroundColor" red="0.86274516580000005" green="0.84705877299999999" blue="0.77254903320000001" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                            </view>
+                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ah0-7b-eIJ">
+                                                <rect key="frame" x="0.0" y="503" width="374" height="503"/>
+                                                <subviews>
                                                     <imageView clipsSubviews="YES" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="Screen Shot 2022-06-16 at 11.54.53 AM" translatesAutoresizingMaskIntoConstraints="NO" id="cT9-1N-SbA">
-                                                        <rect key="frame" x="16" y="91" width="342" height="404"/>
+                                                        <rect key="frame" x="16" y="8" width="342" height="404"/>
                                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                         <gestureRecognizers/>
                                                     </imageView>
